--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.facebook.android:facebook-android-sdk:(4,5)'
+    compile 'com.facebook.android:facebook-android-sdk:4.10.0'
 }
