--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,14 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+
+
     compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
     compile 'com.android.support:support-annotations:24.0.0-alpha1'
-
     compile 'com.android.support:gridlayout-v7:24.0.0-alpha1'
     compile 'com.android.support:cardview-v7:24.0.0-alpha1'
     compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
     compile 'com.android.support:design:24.0.0-alpha1'
-
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
+    compile 'com.android.support:support-v4:23.2.1'
 }
