--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'Google Inc.:Google APIs:23'
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 23
+    buildToolsVersion '24.0.0 rc1'
 
     defaultConfig {
         applicationId "com.example.android.boemiaapp"
@@ -26,8 +26,6 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
-
     compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
     compile 'com.android.support:support-annotations:24.0.0-alpha1'
     compile 'com.android.support:gridlayout-v7:24.0.0-alpha1'
@@ -35,5 +33,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
     compile 'com.android.support:design:24.0.0-alpha1'
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
-    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:support-v4:24.0.0-alpha1'
 }
