--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission
-        android:name="com.example.android.sunshine.app.permission.C2D_MESSAGE"
+        android:name="com.example.android.boemiaapp.app.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.example.android.sunshine.app.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.example.android.boemiaapp.app.permission.C2D_MESSAGE" />
 
     <!-- Permissions required by the sync adapter -->
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
