--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '24.0.0 rc1'
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
         applicationId "com.example.android.boemiaapp"
@@ -24,14 +24,8 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
-    compile 'com.android.support:support-annotations:24.0.0-alpha1'
-    compile 'com.android.support:gridlayout-v7:24.0.0-alpha1'
-    compile 'com.android.support:cardview-v7:24.0.0-alpha1'
-    compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
-    compile 'com.android.support:design:24.0.0-alpha1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
-    compile 'com.android.support:support-v4:24.0.0-alpha1'
 }
