--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
+
+
