--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '23.0.2'
 
     defaultConfig {
-        applicationId "com.example.android.boemiaapp"
+        applicationId "com.example.android.boemiaapp.app"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -33,6 +33,9 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:design:23.2.1'
     compile 'com.google.android.gms:play-services-location:8.4.0'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
 
 
