--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,32 +27,39 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:hardwareAccelerated="false"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyA31glk_NoNMe4U9oj-Au2PDNfyCSHXaK8" />
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".app.MainActivity"
+        <activity
+            android:name=".app.MainActivity"
+            android:hardwareAccelerated="true"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".app.SettingsActivity"
+            android:label="@string/action_settings"
+            android:parentActivityName="app.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.boemiaapp.app.MainActivity" />
         </activity>
 
         <activity
@@ -61,11 +68,6 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-        <activity
-            android:name=".app.LocationActivity"
-            android:hardwareAccelerated="true">
-
-        </activity>
     </application>
 
 </manifest>
