--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="false"
@@ -35,11 +39,11 @@
         android:theme="@style/AppTheme"
         android:fullBackupContent="true">
         <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_api_id" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -56,6 +60,7 @@
 
         <activity android:name=".app.LoginActivity"
             android:label="@string/action_login"
+            android:theme="@style/AppTheme"
             android:parentActivityName=".app.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -65,6 +70,7 @@
         <activity
             android:name=".app.SettingsActivity"
             android:label="@string/action_settings"
+            android:theme="@style/AppTheme"
             android:parentActivityName="app.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
