--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,8 @@
         <activity
             android:name=".app.MainActivity"
             android:hardwareAccelerated="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -61,6 +62,7 @@
         <activity android:name=".app.LoginActivity"
             android:label="@string/action_login"
             android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"
             android:parentActivityName=".app.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -71,6 +73,7 @@
             android:name=".app.SettingsActivity"
             android:label="@string/action_settings"
             android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"
             android:parentActivityName="app.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
