--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-analytics:9.0.2'
     compile 'com.google.android.gms:play-services-gcm:9.0.2'
     compile 'com.google.android.gms:play-services-ads:9.0.2'
+    compile 'io.realm:android-adapters:1.3.0'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
 apply plugin: 'com.google.gms.google-services'
 
